Add scaling on hover

--- a/src/features/bubbles/Bubble.less
+++ b/src/features/bubbles/Bubble.less
@@ -1,7 +1,6 @@
 @import '../../styles/mixins';
 @import '../../styles/global';
 
-.bubbles-bubbles {
-  position: relative;
-
+.bubbles-bubble {
+  transition: r 0.3s;
 }
