--- a/src/features/bubbles/style.less
+++ b/src/features/bubbles/style.less
@@ -1,3 +1,6 @@
 @import '../../styles/mixins';
 @import './Bubbles';
 @import './Bubble';
+@import './AutoSizedBubbles';
+@import './TopicTag';
+@import './ConnectedAutoSizedBubbles';
