--- a/src/features/bubbles/SvgTopicTag.less
+++ b/src/features/bubbles/SvgTopicTag.less
@@ -1,6 +1,6 @@
 @import '../../styles/mixins';
 @import '../../styles/global';
 
-.bubbles-topic-tag {
+.bubbles-svg-topic-tag {
   transition-delay: transform @length-animation-hover;
 }
