--- a/src/features/bubbles/style.less
+++ b/src/features/bubbles/style.less
@@ -2,5 +2,5 @@
 @import './Bubbles';
 @import './Bubble';
 @import './AutoSizedBubbles';
-@import './TopicTag';
+@import './SvgTopicTag';
 @import './ConnectedAutoSizedBubbles';
