--- a/src/features/bubbles/style.less
+++ b/src/features/bubbles/style.less
@@ -4,3 +4,5 @@
 @import './AutoSizedBubbles';
 @import './SvgTopicTag';
 @import './ConnectedAutoSizedBubbles';
+@import './ArchiveDrawer';
+@import './ArticleList';
