--- a/src/features/home/DefaultPage.less
+++ b/src/features/home/DefaultPage.less
@@ -25,6 +25,11 @@ html {
   text-align: center;
   width: 100%;
   height: 100%;
+  .drawer-button {
+    position: absolute;
+    right: 16px;
+    bottom: 16px;
+  }
   .app {
     text-align: center;
   }
