Make UI changes

--- a/src/features/home/DefaultPage.less
+++ b/src/features/home/DefaultPage.less
@@ -25,6 +25,11 @@ html {
   text-align: center;
   width: 100%;
   height: 100%;
+  .home-default-page-header {
+    font-size: 28px;
+    color: white;
+    background-color: rgb(234,33,45)
+  }
   .drawer-button {
     position: absolute;
     right: 16px;
