--- a/src/features/angus/Angus.less
+++ b/src/features/angus/Angus.less
@@ -3,9 +3,9 @@
 
 .angus {
     position: absolute;
-    top: 0;
+    top: 42px;
     left: 0;
-    width: 400px;
+    width: 600px;
     z-index: @z-index-angus;
     .angus-card {
       position: relative;
@@ -20,10 +20,11 @@
         }
       }
       .angus-content {
-        padding: 10px;
+        padding: 15px 20px;
         .bot-message {
           text-align: left;
           line-height: 20px;
+          font-size: 16px;
         }
       }
     }
