--- a/src/features/angus/Angus.less
+++ b/src/features/angus/Angus.less
@@ -3,7 +3,7 @@
 
 .angus {
     position: absolute;
-    top: 42px;
+    top: 64px;
     left: 0;
     width: 600px;
     z-index: @z-index-angus;
@@ -20,7 +20,8 @@
         }
       }
       .angus-content {
-        padding: 15px 20px;
+        margin: 15px 20px;
+        background-color: white;
         .bot-message {
           text-align: left;
           line-height: 20px;
