--- a/src/features/home/DefaultPage.less
+++ b/src/features/home/DefaultPage.less
@@ -28,7 +28,8 @@ html {
   .home-default-page-header {
     font-size: 28px;
     color: white;
-    background-color: rgb(234,33,45)
+    background-color: rgb(234,33,45);
+    font-family: 'Playfair Display';
   }
   .drawer-button {
     position: absolute;
