--- a/src/features/angus/Angus.less
+++ b/src/features/angus/Angus.less
@@ -22,6 +22,10 @@
       .angus-content {
         margin: 15px 20px;
         background-color: white;
+        .welcome {
+          font-size: 16pt;
+          font-family: "Playfair Display";
+        }
         .bot-message {
           text-align: left;
           line-height: 20px;
