--- a/src/features/home/DefaultPage.less
+++ b/src/features/home/DefaultPage.less
@@ -30,6 +30,12 @@ html {
     color: white;
     background-color: rgb(234,33,45);
     font-family: 'Playfair Display';
+    height: 42px;
+    .home-default-page-header-today {
+      position: absolute;
+      left: 24px;
+      top: 0;
+    }
   }
   .drawer-button {
     position: absolute;
